crates/core/src/core/config/snapshots/newton_core__core__config__loader__tests__load_config_valid.snap
---
source: src/core/config/loader.rs
expression: result
---
NewtonConfig {
    project: ProjectConfig {
        name: "test-project",
        template: Some(
            "test-template",
        ),
    },
    executor: ExecutorConfig {
        coding_agent: "test-agent",
        coding_agent_model: "zai-coding-plan/glm-4.7",
        auto_commit: true,
    },
    evaluator: EvaluatorConfig {
        test_command: Some(
            "./test.sh",
        ),
        score_threshold: 80.0,
    },
    advisor: AdvisorConfig,
    context: ContextConfig {
        clear_after_use: true,
        file: ".newton/state/context.md",
    },
    promise: PromiseConfig {
        file: ".newton/state/promise.txt",
    },
    workflow: WorkflowRuntimeConfig {
        state_dir: None,
    },
}
